# kafka-delta-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: devcontainer-build.yaml  rust-ci-caller.yaml
src/: main.rs
src/config/: mod.rs
src/delta/: mod.rs
src/handlers/: mod.rs
src/kafka/: mod.rs
src/logging/: mod.rs
src/model/: mod.rs
src/monitoring/: mod.rs
src/pipeline/: mod.rs
src/tests/: integration.rs
src/util/: mod.rs
src/utils/: mod.rs
